add: icono de vista/me interesa

--- a/src/views/_product-card.html
+++ b/src/views/_product-card.html
@@ -55,11 +55,10 @@
                 <form action="product/details/{{ product.id }}" method="GET">
                     <input type="text" class="d-none" name="productid" value="{{ product.id }}">
                     <button type="submit" id="interestButton" class="btn btn-outline-dark mb-2"
-                    style="position: absolute;right: 2em"|
-                    >Me interesa</button>
+                    style="position: absolute;right: 6em;bottom: 5em;"|
+                    ><i class="fa-solid fa-eye"></i></button>
                 </form>
                 <!-- Boton para eliminar un producto-->
-
                 <form action="" method="GET" id="btnDelete">
                     <button type="button" id="eliminar-{{ product.id }}" class="btn btn-outline-danger mb-2 eliminar-button"
                             data-product-id="{{ product.id }}"
