feat: Agrego la funcionalidad de acceder a mis chats desde la vista header y agrego los endpoints necesarios

--- a/src/views/_header.html
+++ b/src/views/_header.html
@@ -74,6 +74,7 @@
                 <div class="dropdown-menu dropdown-userLog" aria-labelledby="dropdownUserButton" style="left: auto; right: 0; border: 0.5px solid #1A2234;">
                     <div class="show">
                         <a class="dropdown-item" href="/my_products">Mis productos</a>
+                        <a class="dropdown-item" href="/mis-chats">Mis Chats</a>
                         <a class="dropdown-item" href="/logout">Cerrar sesión</a>
                     </div>
                 </div>
