--- a/src/views/_product_details.html
+++ b/src/views/_product_details.html
@@ -78,6 +78,9 @@
         transition: background 1s;
         margin-right: 10px;
     }
+    #btnFavs:hover{
+        background-color: transparent;
+    }
 
 </style>
 {%endblock%}
@@ -160,14 +163,34 @@
             </form>
         </div>
         {% endif %}
-         <!-- Falta agregar la logica de favorito, 1 usuario puede tener muchos productos favoritos, una lista de favoritos-->
+        {% if estaAuth === true %}
         <div class="col p-3 d-flex justify-content-start">
-            <button type="submit" class="btn btn-primary">
+            <button id="btnFavs" data-product-id="{{ product.id }}" type="submit" class="btn btn-outline-warning mb-2 favorito-button">
                 <!-- otra opciones https://www.neoguias.com/mostrar-ocultar-elementos-html/#Atributo_Hidden_de_HTML-->
-                <i class="fa-regular fa-heart" style="display: block;"></i>
-                <i class="fa-solid fa-heart" style="display: none;"></i>
+                <i class="fa-regular fa-star" style="display: block;"></i>
             </button>
         </div>
+        {% endif %}
     </div>
 </div>
+
+<script>
+    document.querySelector('#btnFavs').addEventListener('click', function() {
+        var productId = this.getAttribute('data-product-id');
+        fetch(`/my_favs/${productId}`, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ producto_id: productId }),
+        })
+        .then(response => response.json())
+        .then(data => {
+            console.log(data.mensaje);
+        })
+        .catch((error) => {
+            console.error('Error:', error);
+        });
+    });
+</script>
 {% endblock %}
