Style: se modificaron los estilos y las posiciones de algunos elementos

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -56,6 +56,12 @@ body {
 #btnDelete{
     display: none;
 }
+#btnDeleteFav{
+    display: none;
+}
+#btnDeleteFav:hover{
+    background-color: transparent;
+}
 
 .fechaCal{
     background-color: #515966;
