--- a/src/views/_product_details.html
+++ b/src/views/_product_details.html
@@ -18,6 +18,7 @@
         padding: 20px 20px 20px;
         text-align: center;
         border-radius: 25px;
+        position: relative;
     }
 
     h1{
@@ -80,6 +81,13 @@
     }
     #btnFavs:hover{
         background-color: transparent;
+    }
+    #btnFavs{
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin-top: 27px;
+        margin-right: 20px;
     }
 
 </style>
@@ -187,6 +195,9 @@
         .then(response => response.json())
         .then(data => {
             console.log(data.mensaje);
+            var cambiarIcono = this.querySelector('i');
+            cambiarIcono.classList.remove('fa-regular');
+            cambiarIcono.classList.add('fa-solid');
         })
         .catch((error) => {
             console.error('Error:', error);
