--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -18,6 +18,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Montserrat:wght@400;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10"></link>
+    <link rel="stylesheet" href="path/to/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
     {% block stylesheet %} {%endblock%}
     <!-- /build -->
@@ -31,6 +33,7 @@
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script src="https://mozilla.github.io/nunjucks/files/nunjucks-slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 {% block js %} {% endblock %}
 <body class="app">
